[Fix] anchor has broken with overflow:hidden

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body {
 }
 
 .wrapper {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   min-height: 100%;
