--- a/dev/sass/app.sass
+++ b/dev/sass/app.sass
@@ -13,7 +13,7 @@ body
     background: #111111
 
 .wrapper
-    overflow: hidden
+    //overflow: hidden
     display: flex
     flex-direction: column
     min-height: 100%
